# MCP-Templates

./: LICENSE  README.md
Templates/: README.md
Templates/go/: README.md
Templates/go/basic-api-wrapper/: Cargo.toml
Templates/go/basic-api-wrapper/src/: main.rs
Templates/go/google-calendar-v1/src/: main.rs
Templates/python/: README.md
Templates/python/basic-api-wrapper/: README.md  config.py  env.example  server.py  setup_auth.py
Templates/python/database-enhanced/: README.md  config.py  env.example  requirements.txt  server.py  setup_auth.py
Templates/python/google-calendar-v1/: server.py
Templates/python/graphql-direct/: README.md  config.py  env.example  requirements.txt  server.py  setup_auth.py
Templates/typescript/: README.md
Templates/typescript/basic-api-wrapper/: .env  auth.ts  config.ts  package-lock.json  package.json  server.ts  setup-auth.ts  tsconfig.json
Templates/typescript/google-calendar-v1/: server.ts
